--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 
     <!--Linking css file-->
     <link rel="stylesheet" href="src/style.css">
+
+    <!-- Link Favicon -->
+    <link rel="icon" href="images/ecommerce-favicon.png" type="image/png">
+
 </head>
 
 <body>
